--- a/src/styles.css
+++ b/src/styles.css
@@ -91,14 +91,32 @@ body {
   max-height: 15px;
 }
 
+.add-set-container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 10px;
+}
+
+.add-set-container > form {
+  display: none;
+  gap: 10px;
+  font-size: 1rem;
+  background-color: white;
+  width: 250px;
+  border-radius: 2px;
+  padding: 10px;
+}
+
 .add-set {
+  font-size: 1rem;
   border-radius: 3px;
-  width: 130px;
-  min-width: 130px;
-  max-width: 130px;
-  height: 40px;
-  min-height: 40px;
-  max-height: 40px;
+  width: 100px;
+  min-width: 100px;
+  max-width: 100px;
+  height: 30px;
+  min-height: 30px;
+  max-height: 30px;
 }
 
 .display {
@@ -147,7 +165,7 @@ body {
 
 .keyboard-container {
   background-color: #db3f59;
-  flex: 6;
+  flex: 4;
   gap: 10px;
   display: flex;
   flex-direction: column;
@@ -158,7 +176,7 @@ body {
 .keyboard {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
   width: max(30%, 300px);
   height: 70%;
   gap: 5px;
@@ -209,8 +227,8 @@ body {
   flex: 1;
   background-color: rgb(245, 245, 245);
   border-radius: 5px;
-  height: 30px;
-  max-width: 50px;
+  height: 45px;
+  max-width: 70px;
 }
 
 .sets > span:hover {
